Implement new features and refactor existing components
- Added new controllers and services for managing comments, notifications, and user favorites.
- Introduced new DTOs for comment and notification handling, enhancing data structure and validation.
- Implemented role-based access control (RBAC) features, including new roles and permissions management.
- Refactored existing services and controllers to integrate new features and improve maintainability.
- Updated application properties and database migrations to support new functionalities.
- Removed deprecated components and optimized existing code for better performance and clarity.